chore(external): fix submodule mapping to external/Tetris
Remove stale root-level 'Tetris' mapping (index + .git/modules + config)

Init/update submodule; branch=main; status clean

QA: git submodule status shows external/Tetris; no 'Tetris' path remains

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "Tetris"]
-	path = Tetris
+[submodule "external/Tetris"]
+	path = external/Tetris
 	url = git@github.com:phcastello/Tetris.git
+	branch = main
