feat(env): introduz SDK Environment e adaptador GameEnv (esqueleto)
Cria biblioteca env_tetris (adapters/tetris_game/GameEnv.cpp) e expõe include dirs (adapters/, sdk/include/, external/Tetris/engine/include)

Linka env_tetris -> tetris_engine; ai_runner passa a depender de env_tetris (encapsula engine)

Adiciona SDK (tetrissdk/Environment.hpp) e READMEs em adapters/, agents/, bench/, sdk/

Inclui configs iniciais p/ agentes (random, heuristic_greedy, expectimax, mcts_rollout, dqn)

QA: cmake --build build -j ok; ./build/ai_runner executa; ldd sem sfml; headers acessíveis (SDK/adapter/engine)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,21 @@ set(BUILD_CLI OFF CACHE BOOL "Disable CLI from submodule" FORCE)
 
 add_subdirectory(external/Tetris)
 
-# Seu runner/agents vão linkar só na engine do submódulo:
+add_library(env_tetris STATIC
+    adapters/tetris_game/GameEnv.cpp
+)
+
+target_include_directories(env_tetris
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/adapters
+        ${CMAKE_CURRENT_SOURCE_DIR}/sdk/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/external/Tetris/engine/include
+)
+
+target_link_libraries(env_tetris
+    PUBLIC
+        tetris_engine
+)
+
 add_executable(ai_runner apps/ai_runner.cpp)      # (stub por enquanto)
-target_link_libraries(ai_runner PRIVATE tetris_engine)
+target_link_libraries(ai_runner PRIVATE env_tetris)
