feat(agents): add greedy baseline and per-type logging
Agents: implementa GreedyAgent heurístico baseado em features do tabuleiro e registra o agente na lib tetris_env e no batch runner.

Config: permite tipo 'greedy' no YAML, atualiza batch_runs.yaml com greedy_baseline, threads=0 para usar hardware_concurrency e reduz o rollout_depth padrão do MCTS.

Runner: executa agentes em paralelo com distribuição de threads por agente, controla sucesso com std::atomic_bool e adiciona sufixo por tipo nos arquivos CSV de saída.

--- a/config/batch_runs.yaml
+++ b/config/batch_runs.yaml
@@ -4,13 +4,17 @@
 # Número máximo de threads a usar no total.
 # Se não for especificado ou for <= 0, usar std::thread::hardware_concurrency(),
 # e se isso for 0, cair para 1.
-threads: 4
+threads: 0
 
 # Lista de agentes a serem executados em batch.
 agents:
   - name: random_baseline
-    type: random          # suporta: "random", "mcts_rollout"
+    type: random          # suporta: "random", "greedy", "mcts_rollout"
     episodes: 100         # número de episódios para este agente
+
+  - name: greedy_baseline
+    type: greedy
+    episodes: 100
 
   - name: mcts_default
     type: mcts_rollout
