feat(mcts): alinhar rollout ao score real do jogo
Agents: usa scoreDelta como recompensa interna do MCTS em selecao, expansao e rollout (stepValue).

Agents: rollouts agora sao guiadas por GreedyAgent, com fallback aleatorio defensivo quando a acao proposta nao existe na lista de validas.

Batch: refatora tetris_batch_runner para limitar concorrencia por agente, executar episodios como jobs independentes e registrar log por episodio com sincronizacao via mutex.

Config: ajusta presets do MCTS (iterations=5000, rollout_depth=100) e reduz episodios padrao dos agentes para 10 em batch_runs.yaml para rodadas mais rapidas.

chore: adiciona .vscode/ ao .gitignore para evitar commitar configuracoes locais do VS Code.

--- a/agents/mcts_rollout/config.yaml
+++ b/agents/mcts_rollout/config.yaml
@@ -1,5 +1,7 @@
-# Configuração inicial para o agente MCTS com rollouts.
+# Configuração para o agente MCTS com rollouts guiadas por GreedyAgent.
+# A recompensa interna do MCTS agora usa scoreDelta para alinhar com o score do jogo.
+# As rollouts usam GreedyAgent como política base (fallback aleatório defensivo no código).
 seed: 1337
-iterations: 1000
-rollout_depth: 70
+iterations: 5000      # ajuste inicial; pode ser calibrado depois
+rollout_depth: 100     # profundidade máxima dos rollouts
 uct_c: 1.4142
