--- a/agents/mcts_transposition/config.yaml
+++ b/agents/mcts_transposition/config.yaml
@@ -3,6 +3,11 @@ seed: 1337
 iterations: 200
 rollout_depth: 10
 uct_c: 1.4142
+# Novos campos configuraveis no agente unificado.
+rollout_policy: greedy
+reward_mode: score
+use_transposition_table: true
+tt_max_entries: 0
 # Opcional: defina >0 para encerrar partidas longas automaticamente.
 score_limit: 0
-time_limit_seconds: 10
+time_limit_seconds: 500
