--- a/agents/mcts_rollout/config.yaml
+++ b/agents/mcts_rollout/config.yaml
@@ -1,6 +1,7 @@
 # Configuração para o agente MCTS com rollouts guiadas por GreedyAgent.
 # A recompensa interna do MCTS agora usa scoreDelta para alinhar com o score do jogo.
 # As rollouts usam GreedyAgent como política base (fallback aleatório defensivo no código).
+# Só é utilizado quando alguém pede um MCTS e não indica outro arquivo de configuração.
 seed: 1337
 iterations: 200      # ajuste inicial; pode ser calibrado depois
 rollout_depth: 10     # profundidade máxima dos rollouts
@@ -12,4 +13,4 @@ use_transposition_table: false  # true | false
 tt_max_entries: 0               # 0 = usa limite default interno
 # Opcional: defina >0 para encerrar partidas longas automaticamente.
 score_limit: 0          # limite de score (0 desativa)
-time_limit_seconds: 500   # limite de tempo de episodio em segundos (0 desativa)
+time_limit_seconds: 300   # limite de tempo de episodio em segundos (0 desativa)
