--- a/agents/mcts_rollout/greedy_greedy_tt.yaml
+++ b/agents/mcts_rollout/greedy_greedy_tt.yaml
@@ -7,3 +7,4 @@ rollout_policy: greedy
 reward_mode: greedy
 use_transposition_table: true
 tt_max_entries: 0  # 0 = usa limite default interno
+time_limit_seconds: 300
